<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_movies"
        android:icon="@drawable/ic_movies_white"
        android:title="@string/title_movie" />

    <item
        android:id="@+id/navigation_tv_shows"
        android:icon="@drawable/ic_tv_show_white"
        android:title="@string/title_tv_show" />

    <item
        android:id="@+id/navigation_bookmark"
        android:icon="@drawable/ic_bookmark_active"
        android:title="@string/title_bookmark" />

</menu>